...
        form.add(RcPlace.makeWrappingLabel(Self.infoText(oldInfo)), rc, 102)
        form.add(DialogKit.label(Lang.text(3503, "with this one?")), rc, 3503)                            // IDT_OVERWRITE_QUESTION_END 3503
        // IDI_OVERWRITE_NEW_FILE 110 / IDT_OVERWRITE_NEW_FILE_SIZE_TIME 112
        form.add(Self.iconView(newInfo), rc, 110).frame.size = NSSize(width: 32, height: 32)
        form.add(RcPlace.makeWrappingLabel(Self.infoText(newInfo)), rc, 112)

        let yes = form.add(DialogKit.button(Lang.text(406, "Yes"), target: self, action: #selector(answerYes)), rc, 6)
        let yesToAll = form.add(DialogKit.button(Lang.text(440, "Yes to All"), target: self,
                                                 action: #selector(answerYesToAll)), rc, 440)
        let autoRename = form.add(DialogKit.button(Lang.text(3505, "Auto Rename"), target: self,
                                                   action: #selector(answerAutoRename)), rc, 3505)
        let no = form.add(DialogKit.button(Lang.text(407, "No"), target: self, action: #selector(answerNo)), rc, 7)
        let noToAll = form.add(DialogKit.button(Lang.text(441, "No to All"), target: self,
...
