...
        quickLookBox = OptionsUI.checkbox(PreviewLangID.checkbox, "Quick Look preview for archives",
                                          self, #selector(quickLookClicked(_:)))
        quickLookBox.setAccessibilityIdentifier("optionsMacQuickLook")
        form.add(quickLookBox, rc, ID.quickLook)
        resetButton = NSButton(title: SettingsReset.buttonTitle, target: self, action: #selector(resetAllClicked(_:)))
        resetButton.bezelStyle = .rounded
        resetButton.setAccessibilityIdentifier("optionsMacResetAll")
        form.add(resetButton, rc, ID.resetAll)
        gridObserver = NotificationCenter.default.addObserver(
            forName: OptionsGridLines.toggled, object: nil, queue: nil) { [weak self] note in
            guard let self, note.object as AnyObject? !== self, let on = note.userInfo?["on"] as? Bool else { return }
            self.gridBox.state = on ? .on : .off
        }
...
